# django-ace

./: .gitignore  CONTRIBUTING.rst  LICENCE  MANIFEST.in  PR-HOWTO.md  PR_SUMMARY.md  README.md  README.rst  create-pr.sh  pyproject.toml  setup.cfg  setup.py  test_new_features.py  test_widget_render.html  tests.py
ace_editor/: __init__.py  widgets.py
ace_editor/static/ace_editor/: ace_editor.css  ace_editor.js
ace_editor/templates/ace_editor/: ace_editor.html
django_ace/: __init__.py  widgets.py
django_ace/static/django_ace/: widget.css  widget.js
django_ace/static/django_ace/ace/: ace.js  ext-beautify.js  ext-code_lens.js  ext-emmet.js  ext-language_tools.js  ext-modelist.js  ext-options.js  ext-prompt.js  ext-settings_menu.js  ext-themelist.js  keybinding-emacs.js  keybinding-vim.js  keybinding-vscode.js  mode-abc.js  mode-actionscript.js  mode-alda.js  mode-c_cpp.js  mode-clojure.js  mode-coffee.js  mode-coldfusion.js  mode-csound_document.js  mode-csound_orchestra.js  mode-csound_score.js  mode-css.js  mode-curly.js  mode-dart.js  mode-diff.js  mode-django.js  mode-dockerfile.js  mode-drools.js  mode-edifact.js  mode-ejs.js  mode-erlang.js  mode-fsl.js  mode-glsl.js  mode-gobstones.js  mode-graphqlschema.js  mode-groovy.js  mode-haml.js  mode-handlebars.js  (+66 more)
django_ace/static/django_ace/ace/snippets/: abap.js  ada.js  alda.js  apache_conf.js  apex.js  applescript.js  aql.js  asciidoc.js  asl.js  assembly_x86.js  autohotkey.js  batchfile.js  c9search.js  cirru.js  cobol.js  coldfusion.js  crystal.js  csharp.js  csound_score.js  csp.js  curly.js  d.js  dockerfile.js  dot.js  eiffel.js  ejs.js  elm.js  (+95 more)
example/: db.sqlite3
example/example/: settings.py  urls.py
example/example/app/: admin.py  forms.py  models.py  views.py
example/example/app/migrations/: 0001_initial.py
example/example/templates/: snippets.html
