[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "django-ace"
description = "django-ace provides of ACE editor with Django"
readme = "README.rst"
authors = [
    {name = "Bradley Ayers", email = "bradley.ayers@gmail.com"},
    {name = "Julien Palard", email = "julien@palard.fr"},
]
license = {text = "Simplified BSD"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Framework :: Django",
]
urls = {Homepage = "https://github.com/django-ace/django-ace"}
dependencies = ["Django>=2"]
requires-python = "> 2"
dynamic = ["version"]

[tool.setuptools.packages.find]
exclude = [
    "example",
    "example.*",
]
namespaces = false

[tool.setuptools.dynamic]
version = {attr = "django_ace.__version__"}

[tool.black]
