[metadata]
name = django-ace
version = attr: django_ace.__version__
description = django-ace provides integration for ajax.org ACE with Django
long_description = file: README.rst
author = Bradley Ayers
author_email = bradley.ayers@gmail.com
license = Simplified BSD
url = https://github.com/django-ace/django-ace
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Framework :: Django

[options]
packages = find:
include_package_data = True
install_requires = Django>1.11

[options.packages.find]
exclude =
    example
    example.*
